Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13685

Stack corruption in ndis.sys when installing EM4579 wireless USB adapter driver

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.7
    • Networking
    • None

    Description

      ChildEBP RetAddr  
      f28a4cc0 f794108b ndis!_RTC_DefaultErrorFuncW+0x5 [c:\ros\reactos\reactos\sdk\lib\runtmchk\rtcapi.c @ 29]
      f28a4ce8 f7940f61 ndis!_RTC_Failure+0x2b [c:\ros\reactos\reactos\sdk\lib\runtmchk\rtcapi.c @ 88]
      f28a4d18 f793d747 ndis!_RTC_CheckEsp+0x11
      f28a4d20 80448926 ndis!ndisProcWorkItemHandler+0x67 [c:\ros\reactos\reactos\drivers\network\ndis\ndis\misc.c @ 463]
      f28a4d88 8051af86 nt!ExpWorkerThreadEntryPoint+0x1c6 [c:\ros\reactos\reactos\ntoskrnl\ex\work.c @ 162]
      f28a4dbc 80539c13 nt!PspSystemThreadStartup+0x76 [c:\ros\reactos\reactos\ntoskrnl\ps\thread.c @ 156]
      f28a4ddc 8051af0f nt!KiThreadStartup+0x63 [c:\ros\reactos\reactos\ntoskrnl\ke\i386\thrdini.c @ 78]
      f28a4de0 8044875f nt!PspCreateThread+0xedf
      f28a4de4 00000000 nt!ExpWorkerThreadBalanceManager+0x20f

      Attachments

        Activity

          People

            ThFabba ThFabba
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: