[DDK] - Fix calling convention for NDIS_PROC. Fixes stack corruption when running 3rd party network drivers CORE-13685 #resolve

svn path=/trunk/; revision=75551